# semaphore-sms

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/semaphore_sms/: __init__.py  client.py  exceptions.py  http.py
tests/: test_exceptions.py  test_http_client.py  test_semaphore_client.py
